# vst-openproject-mcp

./: .env.example  .gitignore  LICENSE  README.md  install.bat  install.sh  manifest.json  pyproject.toml
src/openproject_mcp/: __main__.py  client.py  config.py  server.py
src/openproject_mcp/tools/: __init__.py  priorities.py  projects.py  statuses.py  time_entries.py  types.py  users.py  versions.py  work_packages.py
