[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openproject-mcp"
version = "0.1.0"
description = "MCP server for the OpenProject REST API — works with Claude, Cursor, and any MCP-compatible client"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["openproject", "mcp", "model-context-protocol", "claude", "cursor"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
openproject-mcp = "openproject_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openproject_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", ".env.example", "pyproject.toml"]
